force-app/main/default/objects/Activity/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Below 1 Cr</fullName>
            </value>
            <value>
                <fullName>1 to 2 Cr</fullName>
            </value>
            <value>
                <fullName>2 to 5 Cr</fullName>
            </value>
            <value>
                <fullName>5 to 7.5 Cr</fullName>
            </value>
            <value>
                <fullName>7.5 to 10 Cr</fullName>
            </value>
            <value>
                <fullName>10 to 15 Cr</fullName>
            </value>
            <value>
                <fullName>15 to 25 Cr</fullName>
            </value>
            <value>
                <fullName>25 to 50 Cr</fullName>
            </value>
            <value>
                <fullName>50 Cr &amp; above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>