force-app/main/default/objects/Activity/fields/Budget_WebForm__c.field-meta.xml
<CustomField>
    <fullName>Budget_WebForm__c</fullName>
    <label>Budget_WebForm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>