force-app/main/default/objects/Activity/fields/Call_Proposed_Date_Of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Call_Proposed_Date_Of_Visit__c</fullName>
    <label>Call Proposed Date Of Visit</label>
    <type>DateTime</type>
</CustomField>