force-app/main/default/objects/Activity/fields/Call_Record__c.field-meta.xml
<CustomField>
    <fullName>Call_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Record</label>
    <referenceTo>VCC1__Call_Record__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>