force-app/main/default/objects/Activity/fields/Customer_Verification__c.field-meta.xml
<CustomField>
    <fullName>Customer_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Verification</label>
    <referenceTo>Customer_Verification__c</referenceTo>
    <relationshipLabel>CustomerVerifications</relationshipLabel>
    <relationshipName>CustomerVerifications</relationshipName>
    <type>Lookup</type>
</CustomField>