force-app/main/default/objects/Activity/fields/Date_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Visit__c</fullName>
    <label>Date of Visit</label>
    <type>Date</type>
</CustomField>