force-app/main/default/objects/Activity/fields/Email_Id_New__c.field-meta.xml
<CustomField>
    <fullName>Email_Id_New__c</fullName>
    <description>For Thank you Email</description>
    <label>Email Id New</label>
    <type>Email</type>
</CustomField>