force-app/main/default/objects/Activity/fields/Follow_Up_Status__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Status__c</fullName>
    <label>Follow Up Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deciding - Need More Time</fullName>
            </value>
            <value>
                <fullName>Discussing with Family</fullName>
            </value>
            <value>
                <fullName>Arranging Funds</fullName>
            </value>
            <value>
                <fullName>Looking for Other Options</fullName>
            </value>
            <value>
                <fullName>Awaiting Loan Eligibility/Approval</fullName>
            </value>
            <value>
                <fullName>Price Deviation Required</fullName>
            </value>
            <value>
                <fullName>Payment Schedule Deviation Required</fullName>
            </value>
            <value>
                <fullName>Follow Up Not Applicable</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>