force-app/main/default/objects/Activity/fields/Last_Mile_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Last_Mile_Conversion__c</fullName>
    <label>Last Mile Conversion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>