force-app/main/default/objects/Activity/fields/Previous_Call_Attempt_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Call_Attempt_Status__c</fullName>
    <label>Previous Call Attempt Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>