force-app/main/default/objects/Activity/fields/Privacy_Policy_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy_Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privacy Policy Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>