force-app/main/default/objects/Activity/fields/PropStrength__Assignment_Rule_Applied__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Assignment_Rule_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment Rule Applied</label>
    <type>Checkbox</type>
</CustomField>