force-app/main/default/objects/Activity/fields/PropStrength__Date_for_WorkFlow__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Date_for_WorkFlow__c</fullName>
    <label>Date for WorkFlow</label>
    <type>DateTime</type>
</CustomField>