force-app/main/default/objects/Activity/fields/PropStrength__Escalation_ActionId__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Escalation_ActionId__c</fullName>
    <label>Escalation ActionId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>