force-app/main/default/objects/Activity/fields/PropStrength__Escalation_Check__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Escalation_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation Check</label>
    <type>Checkbox</type>
</CustomField>