force-app/main/default/objects/Activity/fields/Reason_For_Call__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Call__c</fullName>
    <label>Reason For Call</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Post Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>