force-app/main/default/objects/Activity/fields/Revisit__c.field-meta.xml
<CustomField>
    <fullName>Revisit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this is a visit or a revisit record</description>
    <label>Revisit</label>
    <type>Checkbox</type>
</CustomField>