force-app/main/default/objects/Activity/fields/Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>Skill_Name__c</fullName>
    <description>Used for Nice to Stamp Skill</description>
    <label>Skill Name</label>
    <type>TextArea</type>
</CustomField>