force-app/main/default/objects/Activity/fields/Sub_Dispositions__c.field-meta.xml
<CustomField>
    <fullName>Sub_Dispositions__c</fullName>
    <label>Sub Dispositions</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Attempt_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ringing</fullName>
            </value>
            <value>
                <fullName>Not Reachable</fullName>
            </value>
            <value>
                <fullName>Call Busy</fullName>
            </value>
            <value>
                <fullName>Swicthed Off</fullName>
            </value>
            <value>
                <fullName>Invalid Number</fullName>
            </value>
            <value>
                <fullName>Never Inquired</fullName>
            </value>
            <value>
                <fullName>Inquired By Mistake</fullName>
            </value>
            <value>
                <fullName>Job  Seeker</fullName>
            </value>
            <value>
                <fullName>Rent Inquiry</fullName>
            </value>
            <value>
                <fullName>Personal Business Interest</fullName>
            </value>
            <value>
                <fullName>Broker Inquiry</fullName>
            </value>
            <value>
                <fullName>Interested in Future</fullName>
            </value>
            <value>
                <fullName>Call Back No Contact</fullName>
            </value>
            <value>
                <fullName>Need Time to Think</fullName>
            </value>
            <value>
                <fullName>Call Back Busy</fullName>
            </value>
            <value>
                <fullName>Location Not Preferred</fullName>
            </value>
            <value>
                <fullName>Booked with competition</fullName>
            </value>
            <value>
                <fullName>Wants Ready Project Only</fullName>
            </value>
            <value>
                <fullName>Already Invested</fullName>
            </value>
            <value>
                <fullName>Not happy with Size of Aparment</fullName>
            </value>
            <value>
                <fullName>Choice of Inventory not available</fullName>
            </value>
            <value>
                <fullName>Desired Configuration Not Available</fullName>
            </value>
            <value>
                <fullName>Low Budget</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Follow Up-Qualified</fullName>
            </value>
            <value>
                <fullName>Follow up - email</fullName>
            </value>
            <value>
                <fullName>Follow up - social</fullName>
            </value>
            <value>
                <fullName>Visit Proposed</fullName>
            </value>
            <value>
                <fullName>Visit Confirmed</fullName>
            </value>
            <value>
                <fullName>Visit Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>