force-app/main/default/objects/Activity/fields/Task_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Closure_Date__c</fullName>
    <label>Task Closure Date</label>
    <type>Date</type>
</CustomField>