force-app/main/default/objects/Activity/fields/Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Task_Subject__c</fullName>
    <label>Task Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calls</fullName>
            </value>
            <value>
                <fullName>Meeting In Hartland</fullName>
            </value>
            <value>
                <fullName>Meeting In Brokers Office</fullName>
            </value>
            <value>
                <fullName>Zoom Call</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>