force-app/main/default/objects/Activity/fields/Visit_Form_No__c.field-meta.xml
<CustomField>
    <fullName>Visit_Form_No__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Visit Form Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>