force-app/main/default/objects/Activity/fields/Visitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Name__c</fullName>
    <label>Visitor Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>