force-app/main/default/objects/Activity/fields/Web_Banner_Size__c.field-meta.xml
<CustomField>
    <fullName>Web_Banner_Size__c</fullName>
    <description>Also using for loan officer name</description>
    <label>Banner Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>