force-app/main/default/objects/Activity/listViews/PropStrength__AllActivities.listView-meta.xml
<ListView>
    <fullName>PropStrength__AllActivities</fullName>
    <filterScope>Team</filterScope>
    <label>All Activities</label>
</ListView>